# patch_via_gerrit

./: CONTRIBUTING.md  README.md  build_patch_via_gerrit  build_patch_via_gerrit.bat  pyproject.toml  requirements.txt
patch_via_gerrit/: __init__.py
patch_via_gerrit/scripts/: __init__.py  main.py  patch_via_gerrit.py
patch_via_gerrit/tests/: README.md  __init__.py  conftest.py  test_patch_via_gerrit.py
wrapper/: .gitignore  README.md  make_win_wrapper.sh  patch_via_gerrit  patch_via_gerrit-windows.go  release-wrappers.sh
