[project]
name = "patch-via-gerrit"
version = "1.3.0"
description = "Tool used to modify a local 'repo sync' with changes from Gerrit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "certifi",
    "pygerrit2>=2.0.15",
    "requests>=2.27.1",
    "urllib3>=1.26.20",
]

[project.scripts]
patch_via_gerrit = "patch_via_gerrit.scripts.main:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "flit>=3.2,<4",
    "pytest>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["patch_via_gerrit/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
